--- a/booking.css
+++ b/booking.css
@@ -1,3 +1,8 @@
+
+body{
+    background-color:#61876E;
+}
+
 .container {
     margin: 20px auto;
     padding: 20px;
@@ -19,7 +24,7 @@ form input {
 
 form button {
     padding: 8px 15px;
-    background-color: #007bff;
+    background-color: black;
     color: #fff;
     border: none;
     cursor: pointer;
