--- a/home.css
+++ b/home.css
@@ -100,7 +100,8 @@ header{
 
 .service{
  text-align: center;
- margin-top: 170px;
+ margin-top: 170px; 
+ border-radius:50%;
 }
 .service h1{
     font-weight: bolder;
@@ -149,7 +150,7 @@ header{
     height: 300px;
 }
 .pic1:hover{
-    transform: scale(1.3);
+    transform: scale(1);
     z-index: 2;
 }
 
